--- a/CalculosTrabalhistas/app/src/main/res/layout/activity_salario_base.xml
+++ b/CalculosTrabalhistas/app/src/main/res/layout/activity_salario_base.xml
@@ -53,15 +53,28 @@
         android:layout_width="219dp"
         android:layout_height="50dp"
         android:layout_marginStart="85dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="80dp"
-        android:layout_marginBottom="178dp"
+        android:layout_marginBottom="116dp"
         android:text="TextView"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/fonte_base"
+        app:layout_constraintVertical_bias="0.944" />
+
+    <Button
+        android:id="@+id/fonte_base"
+        android:layout_width="169dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="8dp"
+        android:text="Fonte"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />
 </android.support.constraint.ConstraintLayout>
