--- a/ControleDeTarefas/app/src/main/res/layout/activity_add_edit.xml
+++ b/ControleDeTarefas/app/src/main/res/layout/activity_add_edit.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp">
 
-    <!-- Email Label -->
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -70,5 +70,20 @@
         android:text="Deletar"
         android:visibility="gone"
         tools:targetApi="jelly_bean" />
+
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/btnAddFoto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-smallcaps"
+        android:padding="12dp"
+        android:text="Adicionar Foto"
+        tools:targetApi="jelly_bean" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        app:srcCompat="@mipmap/ic_launcher" />
 
 </LinearLayout>
