--- a/IMC/app/src/main/res/layout/activity_main.xml
+++ b/IMC/app/src/main/res/layout/activity_main.xml
@@ -171,4 +171,19 @@
         app:layout_constraintHorizontal_bias="0.147"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/fisico"
+        android:layout_width="148dp"
+        android:layout_height="28dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.583"
+        app:layout_constraintStart_toEndOf="@+id/radioGroup"
+        app:layout_constraintTop_toBottomOf="@+id/peso"
+        app:layout_constraintVertical_bias="0.053" />
+
 </android.support.constraint.ConstraintLayout>
