--- a/ControleDeTarefas/app/src/main/res/layout/activity_add_edit.xml
+++ b/ControleDeTarefas/app/src/main/res/layout/activity_add_edit.xml
@@ -84,6 +84,7 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="240dp"
+        android:visibility="invisible"
         app:srcCompat="@mipmap/ic_launcher" />
 
 </LinearLayout>
